--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,3 +20,7 @@ repos:
         hooks:
         -   id: flake8
             args: [--max-line-length, "88"]
+    -   repo: https://github.com/pre-commit/mirrors-mypy
+        rev: 'master'
+        hooks:
+        -   id: mypy
