--- a/.env
+++ b/.env
@@ -9,5 +9,7 @@ TEST_BATCH_SIZE=1024
 LEARNING_RATE=1.0
 LEARNING_STEP_GAMMA=0.7
 NUM_EPOCHS=14
-NORM_MEAN=0.1307          # print(torch.mean(train_dataset.data / 255))
-NORM_STD=0.3081           # print(torch.std(train_dataset.data / 255))
+# print(torch.mean(train_dataset.data / 255))
+NORM_MEAN=0.1307
+# print(torch.std(train_dataset.data / 255))
+NORM_STD=0.3081
